--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Steven Miller</title>
-  <link rel="stylesheet" href="https://sem2093.github.io/portfolio/css/styles.css" />
- <link href=“https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css” rel=“stylesheet”>
-<link href=“https://getbootstrap.com/docs/5.3/assets/css/docs.css” rel=“stylesheet”>
+ <link rel="stylesheet" href="https://sem2093.github.io/portfolio/css/styles.css" />
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" />
+<link rel= "stylesheet" href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" />
   </head>
 <body>
   <heading>
@@ -153,7 +153,7 @@ Steven Miller Portfolio</a>
   </div>
 </div>
  </main>
-<script src=“https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js”></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
