--- a/index.html
+++ b/index.html
@@ -10,42 +10,40 @@
   </head>
 <body>
   <heading>
-  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-person-fill" viewBox="0 0 16 16">
-  <path d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0zM9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1zM11 8a3 3 0 1 1-6 0 3 3 0 0 1 6 0zm2 5.755V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1v-.245S4 12 8 12s5 1.755 5 1.755z"/>
-</svg>
-<h1>Steven Miller Portfolio</h1>
+<h1> Portfolio - Steven Miller</h1>
   </heading>
   <main>
-    <h3>HTML</h3>
+    <h5>HTML</h5>
     <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
   <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 90%"></div>
 </div>
     <br>
-    <br>
-      <h3>CSS</h3>
+      <h5>CSS</h5>
     <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
   <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 75%"></div>
 </div>
-    <br>
       <br>
-    <h3>JS</h3>
+    <h5>JS</h5>
     <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
   <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 50%"></div>
 </div>
-    <br>
       <br>
-    <h3>React</h3>
+    <h5>React</h5>
     <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
   <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 30%"></div>
 </div>
-    <br>
       <br>
-    <h3>Python</h3>
+    <h5>Python</h5>
     <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
   <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 50%"></div>
 </div>
     <br>
-      <br>
+<h5>Bootstrap</h5>
+    <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 60%"></div>
+</div>
+    <br>
+
 <div class="container text-center">
   <div class="row">
     <!-- projects offcanvas button -->
