--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 </nav>
   </header>
   <main>
-    <button type="button" class="btn btn-dark" onclick="darkMode">Dark Mode</button>
-    <button type="button" class="btn btn-dark" onclick="lightMode">Light Mode</button>
+    <button type="button" class="btn btn-dark" onclick="darkMode()">Dark Mode</button>
+    <button type="button" class="btn btn-dark" onclick="lightMode()">Light Mode</button>
     <br>
     <div class="skillsprogress container">
     <h5 class="skills">HTML<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-filetype-html" viewBox="0 0 16 16">
